# miranda

./: .gitignore  CMakeLists.txt  Makefile  clang-warnings  compile-warnings  fix-headers.sh  mirandaCPU.cc  mirandaCPU.h  mirandaEvent.h  mirandaGenerator.h  mirandaIncGen.cc  mirandaMemMgr.h
generators/: copygen.h  gupsgen.cc  gupsgen.h  inorderstreambench.h  nullgen.h  randomgen.cc  randomgen.h  revsinglestream.cc  revsinglestream.h  singlestream.cc  singlestream.h  spmvgen.h  stake.cc  stake.h  stencil3dbench.cc  stencil3dbench.h  streambench.cc  streambench.h  streambench_customcmd.cc  streambench_customcmd.h
tests/: copybench.py  goblin_singlestream1-trace-map.py  goblin_singlestream1-trace.py  goblin_singlestream1.py  goblin_singlestream2-trace.py  goblin_singlestream2.py  goblin_singlestream3-trace.py  goblin_singlestream3.py  goblin_streambench_customcmd.py  gupsgen.py  hbm_singlestream1-trace.py  hbm_singlestream1.py  inorderstream.py  randomgen.py  revsinglestream.py  singlestream.py  spmvgen.py  stencil3dbench.py  streambench.py  test_subcomp.py
